# Segment_Intersection

./: .gitignore  CMakeLists.txt  README.md  main.cpp
application/: CMakeLists.txt  main.cpp  test.hpp
headers/: Node.h  Node.hpp  TwoThreeTree.h  TwoThreeTree.hpp
point/: CMakeLists.txt
point/headers/: Point.h  point.hpp
point/sources/: Point.cpp  point.cpp
segment/: CMakeLists.txt
segment/headers/: Segment.h  segment.hpp
segment/sources/: Segment.cpp
service/: CMakeLists.txt
service/headers/: Service.h  service.hpp
service/sources/: Service.cpp  service.cpp
